create github pages

--- a/index.html
+++ b/index.html
@@ -1267,7 +1267,7 @@
                         <h2 class="number pb-3 mbr-fonts-style display-5">I</h2>
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>프로젝트 토론.</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-4">프로젝트의<br>범위 및&nbsp;예산 파악<br></p>
-                           <h3 class="mbr-section-subtitle mbr-fonts-style display-4"><strong><a href="#" class="text-black">더</a>&nbsp;알아보기 &gt;</strong></h3>
+                           <h3 class="mbr-section-subtitle mbr-fonts-style display-4"><strong><a href="#" class="text-black">더</a>&nbsp;</strong>알아보기 &gt;</h3>
                     </div>
                 </div>
             </div>
@@ -1278,7 +1278,7 @@
                         <h2 class="number pb-3 mbr-fonts-style display-5">II</h2>
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>컨셉도출.</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-4">로고,컬러,사진,이미지,영상<br>컨텐츠를 활용한 컨셉 도출</p>
-                          <h3 class="mbr-section-subtitle mbr-fonts-style display-4"><strong><a href="#" class="text-black">더</a>&nbsp;알아보기 &gt;</strong></h3>
+                          <h3 class="mbr-section-subtitle mbr-fonts-style display-4"><strong><a href="#" class="text-black">더</a>&nbsp;</strong>알아보기 &gt;</h3>
                     </div>
                 </div>
             </div>
@@ -1289,7 +1289,7 @@
                         <h2 class="number pb-3 mbr-fonts-style display-5">III</h2>
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>UX/UI Planning.</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-4">최신 트렌드에 맞는<br>아이덴티티 디자인<br></p>
-                           <h3 class="mbr-section-subtitle mbr-fonts-style display-4"><strong><a href="#" class="text-black">더</a>&nbsp;알아보기 &gt;</strong></h3>
+                           <h3 class="mbr-section-subtitle mbr-fonts-style display-4"><strong><a href="#" class="text-black">더</a>&nbsp;</strong>알아보기<strong> &gt;</strong></h3>
                     </div>
                 </div>
             </div>
@@ -1300,7 +1300,7 @@
                         <h2 class="number pb-3 mbr-fonts-style display-5">IV</h2>
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>Develop.</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-4">웹표준 / 앱표준<br>코딩 개발</p>
-                         <h3 class="mbr-section-subtitle mbr-fonts-style display-4"><strong><a href="#" class="text-black">더</a>&nbsp;알아보기 </strong>&gt;</h3>
+                         <h3 class="mbr-section-subtitle mbr-fonts-style display-4"><strong><a href="#" class="text-black">더</a>&nbsp;</strong>알아보기 &gt;</h3>
                     </div>
                 </div>
             </div>
@@ -1663,7 +1663,7 @@
         <div class="row">
             <div class="col-lg-12 mx-auto mbr-form" data-form-type="formoid">
                 <!--Formbuilder Form-->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="VU0lkX3mgOn3FGc5Y1TF9L7wINgr4mxgK/zCAQbvwY9zQE4drlzSUbl/mAC5w8g9XdxeDEkKaKqBVM/83iZP/f2eQTGz8lglb5EIwniTkKAy5f6kI8z49DzXa/IRu3jT">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="uGPYR+WKUmMYRBb7ziHgA+0NpudIIvB5xHccv0ih8yt02maiVj+Hj4LOJ93pfrbHSCI5GpeOjrpZhqTaR1FmqbStuc4Aw0HjwoHYBtxsfEGs1zDMeFCThtNRj/nCRN30">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">작성해 주셔서 감사합니다!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
@@ -1724,7 +1724,7 @@
                 <h2 class="mb-4 footer-main-title mbr-fonts-style display-5"><strong>비에이치엔.</strong></h2>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gwZ9zKJjIsEnUYiacveb6VSHlJ/Mn9doIjFs7EFcn33dHE3f8qsyoFQ3pdJMeUcrEP8QVP8opvqg8sk2kHxKgD12SJSLnwumNw/qVmqhLCyuq+Bgx5c1fJOKNLrhk5EI">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dLq/wiT2Hf+HgpHSeDGW1eBlJOA+Y0fXOPgznhgJ1yK91qTvfShTU6Uhynlz0p2tFD229TpHZffVIFBYn03LuWJUR6kQs5hnArIk6OwbVqrpc7pJn0ZSPojrZ/ZIh11c">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
